--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,16 +8,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Product</a>
+        <a class="nav-link" href="/products">Product</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Admin Login</a>
+        <a class="nav-link" href="/login">Admin Login</a>
       </li>
     </ul>
   </div>
