more front end work done

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #267326;">
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
   <a class="navbar-brand" href="#">
-          <img src="../assets/logo_transparent.png" width="200" height="200" alt="">
+          <img src="../assets/logo_transparent.png" width="150" height="150" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -11,13 +11,13 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Product</a>
+        <a class="nav-link" href="/products">Product</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Admin Login</a>
+        <a class="nav-link" href="/login">Admin Login</a>
       </li>
     </ul>
   </div>
