--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,18 @@
-<p>
-  login works!
-</p>
+<div class="loginBox">
+  <form [formGroup]="user" name="login" (ngSubmit)="login()">
+    <h2>Login</h2>
+    <br />
+    <div class="form-group">
+      <label for="email">Email</label>
+      <br />
+      <input name="email" formControlName="email" type="email">
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <br />
+      <input name="password" formControlName="password" type="password">
+    </div>
+    <br />
+    <button>Submit</button>
+  </form>
+</div>
