Added text to home

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,13 +4,25 @@ body {
 }
 
 h1 {
+  color: #F3541D;
   position: absolute;
   left: 0px;
-  top: 105px;
+  top: 65px;
   width: 50px;
   margin-left: 600px;
   padding: 10px;
   font-family: 'ampu';
+}
+
+p {
+  color: #F3541D;
+  position: absolute;
+  left: 0px;
+  top: 300px;
+
+  margin-left: 500px;
+  padding: 10px;
+  font-family: '';
 }
 
 
