--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,9 @@
 <body>
     <img src="http://bestanimations.com/Nature/Flora/tuilips-animated-gif.gif" height="600" width="1365" alt="">
   <h1>
-  Garden
+  The Garden
 </h1>
+<p>
+  Welcome to THe Garden! Where we handle all your plant & dirt needs!
+</p>
 </body>
