--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,9 +1,10 @@
 <div class="row" >
   <div class="card col-sm-4"  *ngFor="let product of products">
+      <div *ngIf="token !== null || undefined">
+          <button (click)="delete(product.id)" style="float: right; width: 24px; text-align: center;">x</button>
+          </div>
     <h1>{{product.product_name}}</h1>
     <p>{{product.product_description}}</p>
     <h3>{{product.product_price}}</h3>
-
-    <!-- <button *ngIf="localStorage.getItem(token)" (click)="deleteProduct(product.id); getProducts()">x</button> -->
   </div>
 </div>
