--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
   The Garden
 </h1>
 <p>
-  Welcome to THe Garden! Where we handle all your plant & dirt needs!
+  Welcome to The Garden! Where we handle all your plant & dirt needs!
 </p>
 </body>
 
