last commit tonight

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -5,5 +5,6 @@
     <h3>{{product.product_price}}</h3>
 
     <!-- <button *ngIf="localStorage.getItem(token)" (click)="deleteProduct(product.id); getProducts()">x</button> -->
+    <!-- <p><a [routerLink]="['/login']">Logout</a></p> -->
   </div>
 </div>
