--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
+<div id="section"></div>
+<div class="auth-container">
 <h2>Login</h2>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
@@ -15,7 +17,9 @@
         </div>
     </div>
     <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary">Login</button>
+        <button [disabled]="loading" class="btn success">Login</button>
     </div>
     <div *ngIf="error" class="alert alert-danger">{{error}}</div>
 </form>
+
+</div>
