--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,29 +1,25 @@
 body {
   width: 100%;
   height: 100%;
-}
-
-h1 {
-  color: #F3541D;
-  position: absolute;
-  left: 0px;
-  top: 65px;
-  width: 50px;
-  margin-left: 600px;
-  padding: 10px;
-  font-family: 'ampu';
+  margin-top: 1em;
+  background: #D6F8DE !important ;
 }
 
 p {
-  color:	whitesmoke ;
+  color:	#4B6655 ;
   position: absolute;
   left: 0px;
-  top: 350px;
+  top: 22em;
 
-  margin-left: 300px;
+  margin-left: 10em;
   padding: 10px;
   font-family: 'ampu';
   font-size: 1.5em;
+}
+
+a {
+  margin-left: 24em;
+  align-content: center;
 }
 
 
