--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,10 @@
 <body>
-    <img src="http://bestanimations.com/Nature/Flora/tuilips-animated-gif.gif" height="600" width="1365" alt="">
-  <h1>
-  The Garden
-</h1>
-<<<<<<< HEAD
+<div class="section">
+  <a>
+    <img src="../assets/logo_transparent.png" height="600" width="600" alt="">
+    </a>
 <p>
   Welcome to The Garden! Where we handle all your plant & dirt needs!
 </p>
+</div>
 </body>
-
-=======
-</body>
->>>>>>> 57c85f69b6e76eff470cfc69eaaf290ab546970f
