--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,12 @@
-<p>
-  about works!
+<div class="about-container">
+    <h1 id="abouttyler">About Tyler, our Founder</h1>
+<img id="tylerpic" src="../../assets/tyler.jpeg" alt="Tyler">
+<p>Tyler, the founder and soul of Garden, has been passionate about plants since he was 7 years old. He began gardening
+    with his grandparents, starting with tomatoes and eventually moving to squash and pumpkin gardening. After a
+    personal spiritual journey, Tyler became a survivalist that can live solely off plants and berries.
 </p>
+<p>Garden is a passion project Tyler has started with encouragement from his shaman. With every 1000th tree sold, Tyler
+    will include a lock of his dreads in a vacuum-sealed package. If you would like to get in contact with Tyler, for
+    business or pleasure, please use the form below.
+</p>
+</div>
