--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,1 +1,27 @@
+.card {
+  margin: 5px;
 
+  }
+
+  .row {
+    margin-top: 20px;
+    margin-left: 250px;
+  }
+
+  .card-footer {
+    text-align: center;
+    color: #4b6655
+  }
+  .border-success {
+    color: #4b6655
+  }
+h1 {
+ color: #4b6655
+}
+
+p{
+  color: #4b6655
+}
+h3 {
+  color: #4b6655
+}
