--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,5 +21,5 @@
     </div>
     <div *ngIf="error" class="alert alert-danger">{{error}}</div>
 </form>
-
+<p><a [routerLink]="['/login']"></a></p>
 </div>
