--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,12 +1,32 @@
-<div class="about-container">
-    <h1 id="abouttyler">About Tyler, our Founder</h1>
-<img id="tylerpic" src="../../assets/tyler.jpeg" alt="Tyler">
-<p>Tyler, the founder and soul of Garden, has been passionate about plants since he was 7 years old. He began gardening
-    with his grandparents, starting with tomatoes and eventually moving to squash and pumpkin gardening. After a
-    personal spiritual journey, Tyler became a survivalist that can live solely off plants and berries.
-</p>
-<p>Garden is a passion project Tyler has started with encouragement from his shaman. With every 1000th tree sold, Tyler
-    will include a lock of his dreads in a vacuum-sealed package. If you would like to get in contact with Tyler, for
-    business or pleasure, please use the form below.
-</p>
+<div class="row toppee">
+<img class="img-responsive" id="tylerpic" src="../../assets/tyler.jpeg" alt="Tyler">
+<h1 id="abouttyler">About Tyler, our Founder</h1>
+</div>
+<div class="row abouttext">
+    <div class="col-sm-6 paras">
+        <p>
+            Tyler, the founder and soul of Garden, has been passionate about plants since he was 7 years old. He
+            began gardening
+            with his grandparents, starting with tomatoes and eventually moving to squash and pumpkin gardening.
+            After a
+            personal spiritual journey, Tyler became a survivalist that can live solely off plants and berries.
+        </p>
+        <p>
+            Garden is a passion project Tyler has started with encouragement from his shaman. With every 1000th
+            tree
+            sold, Tyler
+            will include a lock of his dreads in a vacuum-sealed package. If you would like to get in contact with
+            Tyler, for
+            business or pleasure, please use the form below.
+        </p>
+    </div>
+    <div class="col-sm-6">
+        <form class="formspree" id="emailForm" method="POST" action="https://formspree.io/connor.mellencamp@gmail.com">
+            <input type="email" id="emailadd" name="email" placeholder="Your email">
+            <br><br>
+            <textarea id="emailmess" name="message" placeholder="Your message" rows="6"></textarea>
+            <br>
+            <button type="submit" id="emailSubmit">Send</button>
+        </form>
+    </div>
 </div>
