--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -31,3 +31,10 @@ p{
 h3 {
   color: #4b6655
 }
+.card-header {
+text-align: center;
+color: #4b6655;
+}
+.body {
+  background: url('https://cdn.pixabay.com/photo/2015/12/09/01/02/colorful-abstract-background-1084082_960_720.jpg')
+}
