--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,8 @@
 <body>
-<div class="section"></div>
-  <a>
-    <img src="../assets/logo_transparent.png" height="600" width="600" alt="">
-    </a>
+<div class="homediv">
+    <img class="centerhome" src="../assets/logo_transparent.png" height="600" width="600" alt="">
 <p>
   Welcome to The Garden! Where we handle all your plant & dirt needs!
 </p>
+</div>
 </body>
