--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,25 +3,21 @@ body {
   height: 100%;
   margin-top: 1em;
   background: #D6F8DE !important ;
+  text-align: center;
+}
+
+.centerhome {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 p {
   color:	#4B6655 ;
-  position: absolute;
-  left: 0px;
-  top: 22em;
-
-  margin-left: 10em;
-  padding: 10px;
+  text-align: center;
   font-family: 'ampu';
   font-size: 1.5em;
+  margin-bottom: 10em;
 }
-
-a {
-  margin-left: 24em;
-  align-content: center;
-}
-
 
 @font-face {
   font-family: 'ampu';
