--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
   <a class="navbar-brand" href="#">
-          <img src="../assets/logo_transparent.png" width="150" height="150" alt="">
+          <img class ="navimg" src="../assets/logo_transparent.png" width="150" height="150" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
