--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -8,7 +8,7 @@
       <div class="card-body text-success">
         <h1 class="card-header bg-transparent border-success">{{product.product_name}}</h1>
         <p class="card-text">{{product.product_description}}</p>
-        <h3 class="card-footer bg-transparent border-success">{{product.product_price}}</h3>
+        <h3 class="card-footer bg-transparent border-success">${{product.product_price}}</h3>
       </div>
     </div>
   </div>
